--- a/roles/pihole/templates/pihole.env.j2
+++ b/roles/pihole/templates/pihole.env.j2
@@ -8,7 +8,7 @@ DNS2="no"
 DNS1="94.140.14.14"
 DNS2="94.140.15.15"
 {% endif %}
-WEBPASSWORD={{ lookup("env", "PIHOLE_WEB_ADMIN_PASS") }}
+WEBPASSWORD='{{ lookup("env", "PIHOLE_WEB_ADMIN_PASS") }}'
 FTLCONF_REPLY_ADDR4="192.168.1.53"
 # PiHole env vars
 ## https://github.com/pi-hole/docker-pi-hole/#running-pi-hole-docker
