--- a/roles/pihole/templates/docker-compose.yml.j2
+++ b/roles/pihole/templates/docker-compose.yml.j2
@@ -21,15 +21,14 @@ services:
       - 127.0.0.1
       - 9.9.9.9 # bootstrap DNS, not used for queries
     networks:
-      lan: {}
       backend:
         ipv4_address: 10.0.1.3
     cap_add:
-      - net_admin 				# modify routing tables and other network-related operations
-      - net_bind_service 	# Allows FTLDNS binding to TCP/UDP sockets below 1024 (specifically DNS service on port 53)
-      - net_raw 					# use raw and packet sockets (needed for handling DHCPv6 requests, and verifying that an IP is not in use before leasing it)
-      - sys_nice 					# FTL sets itself as an important process
-      - cap_chown 				# need to be able to change ownership of log files and databases in case FTL is started as a different user 
+      - NET_ADMIN 				# modify routing tables and other network-related operations
+      - NET_BIND_SERVICE 	# Allows FTLDNS binding to TCP/UDP sockets below 1024 (specifically DNS service on port 53)
+      - NET_RAW 					# use raw and packet sockets (needed for handling DHCPv6 requests, and verifying that an IP is not in use before leasing it)
+      - SYS_NICE 					# FTL sets itself as an important process
+      - CAP_CHOWN 				# need to be able to change ownership of log files and databases in case FTL is started as a different user 
 {% if lookup("env", "DNSCRYPT_ENABLED") == "true" %}
     depends_on:
       - dnscrypt
@@ -46,9 +45,9 @@ services:
       - /opt/dns/dnscrypt-proxy:/config
     dns:
       - 1.1.1.1 # bootstrap DNS, not used for queries
-    ports:
-      - "5353:5353/tcp"
-      - "5353:5353/udp"
+    expose:
+      - "5353/tcp"
+      - "5353/udp"
     networks:
       backend:
         ipv4_address: 10.0.1.2
@@ -61,5 +60,3 @@ networks:
     ipam:
       config:
         - subnet: 10.0.1.0/24
-  lan:
-    external: true
