--- a/roles/pihole/templates/docker-compose.yml.j2
+++ b/roles/pihole/templates/docker-compose.yml.j2
@@ -23,10 +23,12 @@ services:
     networks:
       backend:
         ipv4_address: 10.0.1.3
+    # docker-pi-hole isse #593
+    # https://github.com/pi-hole/docker-pi-hole/issues/593
+    privileged: true
     cap_add:
       - NET_ADMIN 				# modify routing tables and other network-related operations
       - NET_BIND_SERVICE 	# Allows FTLDNS binding to TCP/UDP sockets below 1024 (specifically DNS service on port 53)
-      - NET_RAW 					# use raw and packet sockets (needed for handling DHCPv6 requests, and verifying that an IP is not in use before leasing it)
       - SYS_NICE 					# FTL sets itself as an important process
       - CAP_CHOWN 				# need to be able to change ownership of log files and databases in case FTL is started as a different user 
 {% if lookup("env", "DNSCRYPT_ENABLED") == "true" %}
