--- a/roles/pihole/templates/docker-compose.yml.j2
+++ b/roles/pihole/templates/docker-compose.yml.j2
@@ -4,11 +4,11 @@ services:
   pihole:
     container_name: pihole
     image: pihole/pihole:latest
-    ports:
-      - "53:53/tcp"
-      - "53:53/udp"
-      - "80:80/tcp"
-      - "443:443/tcp"
+    # ports:
+    #   - "53:53/tcp"
+    #   - "53:53/udp"
+    #   - "80:80/tcp"
+    #   - "443:443/tcp"
     env_file:
       - /opt/dns/config/etc-pihole/pihole.env
     # NOTE: IFF running PiHole-Docker on redhat systems, the volumes
@@ -20,17 +20,15 @@ services:
     dns:
       - 127.0.0.1
       - 9.9.9.9 # bootstrap DNS, not used for queries
-    networks:
-      backend:
-        ipv4_address: 10.0.1.3
+    # networks:
+    #   backend:
+    #     ipv4_address: 10.0.1.3
     # docker-pi-hole isse #593
     # https://github.com/pi-hole/docker-pi-hole/issues/593
     privileged: true
+    network_mode: host
     cap_add:
       - NET_ADMIN 				# modify routing tables and other network-related operations
-      - NET_BIND_SERVICE 	# Allows FTLDNS binding to TCP/UDP sockets below 1024 (specifically DNS service on port 53)
-      - SYS_NICE 					# FTL sets itself as an important process
-      - CAP_CHOWN 				# need to be able to change ownership of log files and databases in case FTL is started as a different user 
 {% if lookup("env", "DNSCRYPT_ENABLED") == "true" %}
     depends_on:
       - dnscrypt
@@ -40,19 +38,18 @@ services:
 {% if lookup("env", "DNSCRYPT_ENABLED") == "true" %}
   dnscrypt:
     container_name: dnscrypt
-    # TODO
-    # Build custom dnscrypt image customized for A-DNS || ODoH, etc. (alpine)
     image: klutchell/dnscrypt-proxy:latest
     volumes:
       - /opt/dns/dnscrypt-proxy:/config
     dns:
       - 1.1.1.1 # bootstrap DNS, not used for queries
-    expose:
-      - "5353/tcp"
-      - "5353/udp"
-    networks:
-      backend:
-        ipv4_address: 10.0.1.2
+    # expose:
+    #   - "5353/tcp"
+    #   - "5353/udp"
+    network_mode: host
+    # networks:
+    #   backend:
+    #     ipv4_address: 10.0.1.2
     restart: unless-stopped
 {% endif %}
 
