--- a/roles/pihole/templates/pihole.env.j2
+++ b/roles/pihole/templates/pihole.env.j2
@@ -1,7 +1,8 @@
 # Required + Recommended
 TZ={{ lookup("env", "TIMEZONE") }}
 {% if lookup("env", "DNSCRYPT_ENABLED") == "true" %}
-DNS1="10.0.1.2#5353"
+# DNS1="10.0.1.2#5353"
+DNS1="127.0.0.1#5300"
 DNS2="no"
 {% else %}
 {# AdGuard public DNS servers #}
