Fixing github issue 1019 with docker pihole related to host networking mode. Requires specific env vars indicating pihole has priority, possibly related to updates/changes to docker networking permissions.

--- a/roles/pihole/templates/pihole.env.j2
+++ b/roles/pihole/templates/pihole.env.j2
@@ -25,3 +25,8 @@ DNS_FQDN_REQUIRED=true
 DHCP_ACTIVE=false
 PIHOLE_DOMAIN=lan
 DNSMASQ_LISTENING=local
+
+# Workaround for host network_mode issue
+# https://github.com/pi-hole/docker-pi-hole/issues/1019
+PIHOLE_UID=0
+# DNSMASQ_USER=root
