--- a/roles/pihole/templates/docker-compose.yml.j2
+++ b/roles/pihole/templates/docker-compose.yml.j2
@@ -3,7 +3,8 @@ version: '3.5'
 services:
   pihole:
     container_name: pihole
-    image: pihole/pihole:latest
+    # https://hub.docker.com/r/pihole/pihole
+    image: pihole/pihole:2022.04.01
     # ports:
     #   - "53:53/tcp"
     #   - "53:53/udp"
@@ -23,12 +24,14 @@ services:
     # networks:
     #   backend:
     #     ipv4_address: 10.0.1.3
-    # docker-pi-hole isse #593
-    # https://github.com/pi-hole/docker-pi-hole/issues/593
-    privileged: true
     network_mode: host
+    # https://github.com/pi-hole/docker-pi-hole/issues/593
     cap_add:
       - NET_ADMIN 				# modify routing tables and other network-related operations
+      - NET_BIND_SERVICE
+      - SYS_RESOURCE
+    # To allow non-root to open ports 53, 67, 80 and 443:
+    #   $ sudo sh -c "echo 52 > /proc/sys/net/ipv4/ip_unprivileged_port_start"
 {% if lookup("env", "DNSCRYPT_ENABLED") == "true" %}
     depends_on:
       - dnscrypt
@@ -53,9 +56,9 @@ services:
     restart: unless-stopped
 {% endif %}
 
-networks:
-  backend:
-    driver: bridge
-    ipam:
-      config:
-        - subnet: 10.0.1.0/24
+# networks:
+#   backend:
+#     driver: bridge
+#     ipam:
+#       config:
+#         - subnet: 10.0.1.0/24
