--- a/roles/pihole/templates/docker-compose.yml.j2
+++ b/roles/pihole/templates/docker-compose.yml.j2
@@ -5,11 +5,11 @@ services:
     container_name: pihole
     # https://hub.docker.com/r/pihole/pihole
     image: pihole/pihole:2022.04.01
-    # ports:
-    #   - "53:53/tcp"
-    #   - "53:53/udp"
-    #   - "80:80/tcp"
-    #   - "443:443/tcp"
+    ports:
+      - "53:53/tcp"
+      - "53:53/udp"
+      - "80:80/tcp"
+      - "443:443/tcp"
     env_file:
       - /opt/dns/config/etc-pihole/pihole.env
     # NOTE: IFF running PiHole-Docker on redhat systems, the volumes
@@ -21,10 +21,9 @@ services:
     dns:
       - 127.0.0.1
       - 9.9.9.9 # bootstrap DNS, not used for queries
-    # networks:
-    #   backend:
-    #     ipv4_address: 10.0.1.3
-    network_mode: host
+    networks:
+      backend:
+        ipv4_address: 10.0.1.3
     # https://github.com/pi-hole/docker-pi-hole/issues/593
     cap_add:
       - NET_ADMIN 				# modify routing tables and other network-related operations
@@ -46,19 +45,20 @@ services:
       - /opt/dns/dnscrypt-proxy:/config
     dns:
       - 1.1.1.1 # bootstrap DNS, not used for queries
-    # expose:
-    #   - "5300/tcp"
-    #   - "5300/udp"
-    network_mode: host
-    # networks:
-    #   backend:
-    #     ipv4_address: 10.0.1.2
+    expose:
+      - "5300/tcp"
+      - "5300/udp"
+    networks:
+      backend:
+        ipv4_address: 10.0.1.2
     restart: unless-stopped
 {% endif %}
 
-# networks:
-#   backend:
-#     driver: bridge
-#     ipam:
-#       config:
-#         - subnet: 10.0.1.0/24
+networks:
+  backend:
+    driver: bridge
+    ipam:
+      config:
+        - subnet: 10.0.1.0/24
+  lan:
+    external: true
