Added configured versions for docker images to docker-compose file. Fixed an issue on some versions of raspbian where the dhcpcd name_server settings fail on first time setup by creating bootstrap and final dhcpcd.conf templates, so production uses the pihole itself as the name_server but not before it is setup and running.

--- a/roles/pihole/templates/docker-compose.yml.j2
+++ b/roles/pihole/templates/docker-compose.yml.j2
@@ -4,7 +4,7 @@ services:
   pihole:
     container_name: pihole
     # https://hub.docker.com/r/pihole/pihole
-    image: pihole/pihole:{% lookup("env", "PIHOLE_IMAGE_VERSION") %}
+    image: pihole/pihole:{{ lookup("env", "PIHOLE_IMAGE_VERSION") }}
     # ports:
     #   - "53:53/tcp"
     #   - "53:53/udp"
@@ -41,7 +41,7 @@ services:
 {% if lookup("env", "DNSCRYPT_ENABLED") == "true" %}
   dnscrypt:
     container_name: dnscrypt
-    image: klutchell/dnscrypt-proxy:{% lookup("env", "DNSCRYPT_IMAGE_VERSION") %}
+    image: klutchell/dnscrypt-proxy:{{ lookup("env", "DNSCRYPT_IMAGE_VERSION") }}
     volumes:
       - /opt/dns/dnscrypt-proxy:/config
     dns:
