--- a/roles/pihole/templates/docker-compose.yml.j2
+++ b/roles/pihole/templates/docker-compose.yml.j2
@@ -20,18 +20,13 @@ services:
       - /opt/dns/config/etc-dnsmasq.d:/etc/dnsmasq.d
     dns:
       - 127.0.0.1
-      - 9.9.9.9 # bootstrap DNS, not used for queries
-    # networks:
-    #   backend:
-    #     ipv4_address: 10.0.1.3
+      - {{ lookup("env", "BOOTSTRAP_NAME_SERVER") }} # bootstrap DNS, not used for queries
     network_mode: host
     # https://github.com/pi-hole/docker-pi-hole/issues/593
     cap_add:
       - NET_ADMIN 				# modify routing tables and other network-related operations
       - NET_BIND_SERVICE
       - SYS_RESOURCE
-    # To allow non-root to open ports 53, 67, 80 and 443:
-    #   $ sudo sh -c "echo 52 > /proc/sys/net/ipv4/ip_unprivileged_port_start"
 {% if lookup("env", "DNSCRYPT_ENABLED") == "true" %}
     depends_on:
       - dnscrypt
@@ -45,20 +40,10 @@ services:
     volumes:
       - /opt/dns/dnscrypt-proxy:/config
     dns:
-      - 1.1.1.1 # bootstrap DNS, not used for queries
+      - {{ lookup("env", "BOOTSTRAP_NAME_SERVER") }} # bootstrap DNS, not used for queries
     # expose:
     #   - "5300/tcp"
     #   - "5300/udp"
     network_mode: host
-    # networks:
-    #   backend:
-    #     ipv4_address: 10.0.1.2
     restart: unless-stopped
 {% endif %}
-
-# networks:
-#   backend:
-#     driver: bridge
-#     ipam:
-#       config:
-#         - subnet: 10.0.1.0/24
